[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdsp"
version = "0.1.0"
description = "Product PDF → normalized specs → SQLite, with a CLI for processing & queries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Abdulrahman" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pdfplumber>=0.11.0",
  "pydantic>=2.6.0",
  "orjson>=3.10.7"
]

[project.scripts]
pdsp = "pdsp.cli:app"
